plugins {
  id 'java' // or 'groovy' Must be explicitly applied
  id 'eclipse'
  id 'maven'
  id 'distribution'
}

/*
 * Build .jar, javadoc.jar and sources.jar from the source folder!
 */
 
version = '0.96'
group = 'de.lantool'
sourceCompatibility = 1.8
targetCompatibility = 1.8

sourceSets {
    main {
        java {
            srcDirs = ["src"]
        }
    }
}

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

artifacts {
    archives sourcesJar
    archives javadocJar
}

processResources {
  from ('src') {
    include '**/*.css'
    include '**/*.xml'
    include '**/*.exe'
  }
}

distributions {
    main {
        contents {
            from { 'build/libs' }
        }
    }
}


uploadArchives {
    repositories {
       	mavenLocal()
    }
}

// Get dependencies from Maven central repository
repositories {
    mavenCentral()
    maven {
        url "https://repository.apache.org/content/repositories/snapshots"
    }
}
 
//Project dependencies
dependencies {
   	compile group: 'commons-io', name: 'commons-io', version: '2.4'
    compile 'commons-beanutils:commons-beanutils:1.9.2'
    compile 'org.bushe:eventbus:1.4'
    compile 'org.apache.logging.log4j:log4j-core:2.3'
    compile 'org.apache.logging.log4j:log4j-api:2.3'
    compile 'org.jfxtras:jfxtras-labs:8.0-r3'
    compile 'com.google.code.gson:gson:2.3.1'
    compile 'org.apache.commons:commons-configuration2:2.0-alpha1-SNAPSHOT'
    compile fileTree(dir: 'libs', include: ['*.jar'])
}
